@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2004, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -2425,12 +2425,12 @@ public class XMLGregorianCalendarImpl
         if (lang != null) {
             if (country != null) {
                 if (variant != null) {
-                    locale = new Locale(lang, country, variant);
+                    locale = Locale.of(lang, country, variant);
                 } else {
-                    locale = new Locale(lang, country);
+                    locale = Locale.of(lang, country);
                 }
             } else {
-                locale = new Locale(lang);
+                locale = Locale.of(lang);
             }
         }
         if (locale == null) {
