@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -41,10 +41,12 @@
  *     Fixed according to the 4480280 bug.
  *     Ported from JVMDI.
  *
+ * @requires vm.jvmti & vm.continuations
  * @library /vmTestbase
  *          /test/lib
  * @build nsk.jvmti.GetThreadInfo.thrinfo001
  * @run main/othervm/native ExecDriver --java
+ *      --enable-preview
  *      -agentlib:thrinfo001
  *      nsk.jvmti.GetThreadInfo.thrinfo001
  */
