@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -37,7 +37,7 @@ import java.util.Locale;
 public class NoGroupingUsed {
 
     public static void main(String[] args) {
-        Locale locale = new Locale("xx", "YY");
+        Locale locale = Locale.of("xx", "YY");
         String number = "1234567";
         String formatString = "%,d";
 
