@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -63,8 +63,8 @@ public class SupportedLocalesTest {
 
     private static class TestLocaleServiceProvider extends LocaleServiceProvider {
         private static final Locale[] locales = {
-            new Locale("ja", "JP", "JP"),
-            new Locale("th", "TH", "TH"),
+            Locale.of("ja", "JP", "JP"),
+            Locale.of("th", "TH", "TH"),
             Locale.forLanguageTag("en-US-u-ca-buddhist"),
         };
 
