@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,7 +34,7 @@ import java.util.spi.CalendarNameProvider;
 public class CalendarNameProviderImpl extends CalendarNameProvider {
     static final char FULLWIDTH_ZERO = '\uff10';
     static final Locale[] avail = {
-        new Locale("ja", "JP", "kids"),
+        Locale.of("ja", "JP", "kids"),
     };
 
     @Override
